# libecoli

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  libecoli.spec  meson.build  sources
.github/workflows/: check.yml  publish.yml
devtools/: gen_sym_check.py
doc/: Doxyfile.in  architecture.md  gen-man-pages.sh  gen-node-schema.c  install-man-pages.sh  main.md  meson.build  node-schema.md
examples/extension-editline/: main.c  meson.build
examples/parse-yaml/: meson.build  parse-yaml.c
examples/pool-editline/: main.c  meson.build
examples/readline/: main.c  meson.build
examples/simple-editline/: main.c  meson.build
include/: ecoli.h  ecoli_init.h  meson.build
include/ecoli/: assert.h  complete.h  config.h  dict.h  editline.h  htable.h  init.h  interact.h  log.h  node.h  node_any.h  node_bypass.h  node_cmd.h  node_cond.h  node_dynamic.h  node_dynlist.h  node_empty.h  node_expr.h  node_file.h  node_helper.h  node_int.h  node_many.h  node_none.h  node_once.h  node_option.h  node_or.h  node_re.h  node_re_lex.h  node_seq.h  node_sh_lex.h  node_space.h  node_str.h  node_subset.h  parse.h  string.h  strvec.h  utils.h  vec.h  yaml.h
src/: config.c  dict.c  editline.c  htable.c  interact.c  log.c  meson.build  node.c  node_bypass.c  node_cmd.c  node_cond.c  node_expr.c  node_file.c  node_int.c  node_once.c  node_option.c  node_or.c  node_seq.c  node_sh_lex.c  node_str.c  node_subset.c  parse.c  string.c  strvec.c  yaml.c
test/: node_cmd.c  node_subset.c  string.c
tools/: meson.build
tools/gen-node-schema/: main.c  meson.build
